# BA_Causal-Inference-in-Temporal-Data

./: .gitignore  README.md  environment.yml  pyproject.toml
citris/data_generation/: data_generation_pinball.py  data_generation_voronoi.py
citris/experiments/: __init__.py  datasets.py  train_causal_encoder.py  train_vae.py  utils.py
citris/models/ae/: __init__.py  lightning_module.py
citris/models/baselines/: __init__.py  ivae.py  slowvae.py  utils.py
citris/models/citris_nf/: __init__.py  lightning_module.py
citris/models/citris_vae/: __init__.py  lightning_module.py
citris/models/icitris_vae/: __init__.py  lightning_module.py  mi_estimator.py  prior.py  target_classifier.py
citris/models/shared/: __init__.py  callbacks.py  causal_encoder.py  enco.py  encoder_decoder.py  flow_layers.py  transition_prior.py  visualization.py
data/processed/interventional_pong_preprocessed/: test.npz  test_indep.npz  test_kalman.npz  test_triplets.npz
data/raw/interventional_pong/: settings.json  test.npz  test_indep.npz
data/raw/linear/: synthetic_data_3vars_markov_interventions.csv  synthetic_data_3vars_markov_observations.csv  synthetic_data_5vars_markov_interventions.csv  (+1 more)
src/data-generation/: linear_data_generator.py
src/scripts/: combine_samples_to_npz.py  compute_error_images_citris.py  compute_errors.py  plot_errors.py  plot_run_times.py  print_npz_values.py  process_images_for_kalman.py  render_images_from_npz.py  run_citris.py  run_kalman_filter.py  run_kalman_filter_pong_latents.py  run_kalman_pong.py  squash_images_greyscale_in_npz.py
(+14 files in other folders)
