[tool.poetry]
name = "ba-causal-inference-in-temporal-data"
version = "0.1.0"
description = ""
authors = ["Taha Hundekari <ge47mut@mytum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
